# MLB_Prediction_Model

./: .gitignore  README.md  project_list.md  pyproject.toml  source_capability_matrix.md  verification_contract.md
.github/workflows/: quality-gate.yml
doc/: project_list.md  source_capability_matrix.md  verification_contract.md
docs/: assistant_operating_contract.md  local_environment_audit.md  phase_0d_packaging_repository_structure_contract.md  phase_0e_git_github_workflow_contract.md  phase_0e_quality_gate_acceptance.md  phase_0e_scaffold_acceptance.md  project_list.md  source_capability_matrix.md  verification_contract.md
docs/source_audits/: mlb_statsapi_schedule_asof_readonly_report_2026-06-28.md  mlb_statsapi_schedule_asof_readonly_summary_2026-06-28.json  mlb_statsapi_schedule_audit_report_2024-04-01.md  mlb_statsapi_schedule_future_probe_2026-06-28_to_2026-07-27.csv  mlb_statsapi_schedule_future_probe_2026-06-28_to_2026-07-27.json  mlb_statsapi_schedule_future_probe_report_2026-06-28_to_2026-07-27.md  mlb_statsapi_schedule_snapshot_live_report_2026-07-02.md  mlb_statsapi_schedule_snapshot_live_summary_2026-07-02.json  mlb_statsapi_schedule_source_issued_timestamp_probe_report_2026-07-02.md  mlb_statsapi_schedule_source_issued_timestamp_probe_summary_2026-07-02.json  mlb_statsapi_schedule_summary_2024-04-01.json
tests/: test_asof_snapshot_manifest.py  test_mlb_statsapi_schedule.py  test_mlb_statsapi_schedule_fallback_asof.py  test_mlb_statsapi_schedule_snapshot.py  test_powershell_command_contract.py  test_scaffold.py
(+11 files in other folders)
