[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[project]
name = "mlb-prediction-model"
version = "0.1.0"
description = "Reproducible score-blind MLB data collection and prediction research project."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "beautifulsoup4==4.15.0",
    "duckdb==1.5.4",
    "httpx==0.28.1",
    "lxml==6.1.1",
    "pandas==3.0.3",
    "polars==1.42.0",
    "pyarrow==24.0.0",
    "pydantic==2.13.4",
    "requests==2.34.2",
    "rich==15.0.0",
    "typer==0.26.7",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.19",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
